--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="contenedor">
-            <p>💕¿Te gustaria ser mi ligue Vane?❤️</p>
+            <p>💕¿Te gustaria ser mi novia?❤️</p>
                 <button id="yesBtn">Si</button>
                     <button id="noBtn">No</button>
                         </div>
@@ -21,3 +21,4 @@
                         </script>
 </body>
 </html>
+
