--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loveuvanessa</title>
+    <title>Para ti mi amor</title>
     <link rel="stylesheet" href="diseño.css">
 </head>
 <body>
@@ -21,4 +21,5 @@
                         </script>
 </body>
 </html>
+
 
